syntax = "proto3";

package order;

option go_package = "order-microservice/services/order-ms/adaptors/grpc/pb;pb";

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  string status = 4;
  double total = 5;

}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double unit_price = 3; 
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
  string user_id = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message UpdateOrderStatusResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  string id = 1;
}

message DeleteOrderResponse {
  string message = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

// protoc -I=proto --go_out=services/order-ms/adaptors/grpc/pb --go-grpc_out=services/order-ms/adaptors/grpc/pb proto/order.proto
//protoc -I=proto --go_out=services/payment-ms/adaptors/grpc/pb --go-grpc_out=services/payment-ms/adaptors/grpc/pb proto/payment.proto